# deb-base

./: AUTHORS  LICENSE  Makefile  README.md  build_config.yml  build_deb.sh  config_parser.pl  correct_lintian.pl
docs/: build_config.html  build_deb.html  docco.css
libsnow-1.4.2/: AUTHORS  Makefile  Makefile.in  NEWS  README  TOBS_FORMAT_README.txt  config.status  configure  configure.ac
libsnow-1.4.2/interfaces/: .cvsignore  Arc.h  Arcs.h  CFunc.h  CFuncElt.h  CFuncTerm.h  CalcSubClasses.h  Domain.h  Domains.h  Element.h  FKCLDecode.h  FKServVersions.h  Guard.h  LineParser.h  Mark.h  Marking.h  PNClass.h  PNClasses.h  PNet.h  PNetIO.h  ParserCAMI.h  ParserWrapper.h  Place.h  Places.h  Position.h  Transition.h  Transitions.h  Variable.h  Variables.h  parsedef.h  parsenet.h
libsnow-1.4.2/lib/: FuncParser.h  GcolParser.h  GfuncParser.h  GguardParser.h  GmarkParser.h  GuardParser.h  Makefile  Makefile.am  Makefile.in  MarkParser.h  tobsParser.h
libsnow-1.4.2/parsers/: .cvsignore  FuncLexer.cc  FuncLexer.ll  FuncParser.cxx  FuncParser.hxx  FuncParser.yxx  GcolLexer.cc  GcolLexer.ll  GcolParser.cxx  GcolParser.hxx  GcolParser.yxx  GfuncLexer.cc  GfuncLexer.ll  GfuncParser.cxx  GfuncParser.hxx  GfuncParser.yxx  GguardLexer.cc  GguardLexer.ll  GguardParser.cxx  GguardParser.hxx  GguardParser.yxx  GmarkLexer.cc  GmarkLexer.ll  GmarkParser.cxx  GmarkParser.hxx  GmarkParser.yxx  GuardLexer.cc  GuardLexer.ll  GuardParser.cxx  GuardParser.hxx  GuardParser.yxx  MarkLexer.cc  MarkLexer.ll  MarkParser.cxx  MarkParser.hxx  MarkParser.yxx  tobsLexer.cc  tobsLexer.ll  tobsParser.cxx  tobsParser.hxx  (+1 more)
libsnow-1.4.2/parsers/gspn/: defparser.yacc  parsedef.cpp  parsedef.h
libsnow-1.4.2/sources/: .cvsignore  Arc.cpp  Arcs.cpp  CFunc.cpp  CFuncElt.cpp  CFuncTerm.cpp  CalcSubClasses.cpp  Domain.cpp  Domains.cpp  Element.cpp  FKCLDecode.c  Guard.cpp  LineParser.cpp  Mark.cpp  Marking.cpp  PNClass.cpp  PNClasses.cpp  PNet.cpp  PNetIO.cpp  ParserCAMI.cpp  ParserWrapper.cpp  Place.cpp  Places.cpp  Position.cpp  RedDom.c  Transition.cpp  Transitions.cpp  Variable.cpp  Variables.cpp  cami2gspn.cc  cami2smart.cc  parsedef.cpp  parsenet.cpp  snow.cpp
resources/: languages.json
scripts/: Makefile  build_config.yml  build_deb.sh  buildeb  conf.yml  config_parser.pl  correct_lintian.pl
scripts/man/: build_config.yml.5  buildeb.1
